GSAP Simple scroll animation with scrollTrigger

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,47 @@
     <link rel="stylesheet" href="style.css">
     <title>GSAP Project-2</title>
 </head>
+
 <body>
-    
 
 
+    <div class="pic">
+        <div class="img">
 
+        </div>
+        <img src="./dawson-mccormick-BIMFgSyf1oc-unsplash.jpg" alt="">
+        <h3>Hello World</h3>
 
+    </div>
 
+    <div class="content">
+        <h2 class="content-title">
+            Hello Again
+        </h2>
+
+        <p class="content-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae a ex ut pariatur. Est voluptates illo
+            reiciendis maxime doloribus soluta suscipit quae nihil nemo, cupiditate consequuntur officia. Tenetur
+            asperiores numquam iste consectetur iure ad eius cupiditate doloribus officiis eum, facilis accusamus
+            mollitia. Accusamus, enim earum inventore illo maxime iusto fugit iure voluptate reiciendis doloremque
+            molestiae, excepturi suscipit laboriosam maiores ea eligendi voluptatem incidunt perferendis id,
+            consequuntur delectus saepe quaerat! Accusantium aliquam reiciendis minima nisi vitae eius debitis similique
+            ipsa sapiente quo labore libero, sed ducimus. Dolor similique, qui, nesciunt earum assumenda dolorem
+            obcaecati, minima repellendus recusandae ducimus voluptatum quisquam nobis.<br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae a ex ut pariatur. Est voluptates illo
+            reiciendis maxime doloribus soluta suscipit quae nihil nemo, cupiditate consequuntur officia. Tenetur
+            asperiores numquam iste consectetur iure ad eius cupiditate doloribus officiis eum, facilis accusamus
+            mollitia. Accusamus, enim earum inventore illo maxime iusto fugit iure voluptate reiciendis doloremque
+            molestiae, excepturi suscipit laboriosam maiores ea eligendi voluptatem incidunt perferendis id,
+            consequuntur delectus saepe quaerat! Accusantium aliquam reiciendis minima nisi vitae eius debitis similique
+            ipsa sapiente quo labore libero, sed ducimus. Dolor similique, qui, nesciunt earum assumenda dolorem
+            obcaecati, minima repellendus recusandae ducimus voluptatum quisquam nobis.
+        </p>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>    
     <script src="./app.js"></script>
 </body>
+
 </html>
